contrast fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,6 +11,7 @@
 :root {
   --highlight: #f58f89;
   --background: #fffefd;
+  --turq: #019d8d;
   --gray: #5c5c5c;
   --form-gray: #c4c4c4;
   --faded-highlight: #ffe2d6;
